sovereigntyai-temp/services/data-processor/k8s/data-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-processor
  namespace: sovereignty-ai-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-processor
  template:
    metadata:
      labels:
        app: data-processor
    spec:
      containers:
        - name: data-processor
          image: image-registry.openshift-image-registry.svc:5000/sovereignty-ai-dev/data-processor:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /data-processor_data
              name: persistent-volume
              subPath: data/data-processor_data
            - mountPath: /shared_data
              name: persistent-volume
              subPath: data/shared_data
      restartPolicy: Always
      volumes:
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: persistent-volume-claim
  strategy:
    type: Recreate
