sovereigntyai-temp/services/data-processor/k8s/data-processor-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-processor-route
  namespace: sovereignty-ai-dev
spec:
  to:
    kind: Service
    name: data-processor-service
  port:
    targetPort: 8000
  wildcardPolicy: None
